--- a/assets/css/sass/pages/_home.scss
+++ b/assets/css/sass/pages/_home.scss
@@ -82,6 +82,9 @@
       font-size: 15px;
       font-weight: 600;
       margin-bottom: 30px;
+      @media #{$maxMobile} {
+        font-size: 25px;
+      }
     }
     a {
       padding: 10px;
