--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,11 @@ a {
   font-weight: 600;
   margin-bottom: 30px;
 }
+@media (max-width:767px) {
+  .home .content p {
+    font-size: 25px;
+  }
+}
 .home .content a {
   padding: 10px;
   background: #fff;
