book section it's done

--- a/assets/css/sass/layout/_header.scss
+++ b/assets/css/sass/layout/_header.scss
@@ -7,7 +7,7 @@
       font-weight: 550;
       font-size: 36px;
       color: $dark;
-      text-shadow: $th5-shadow;
+      text-shadow: $text-primary-shadow;
       margin-bottom: 5px;
       span {
         color: $orange;
@@ -37,23 +37,23 @@
         }
       }
       form {
-        input {
-          &:focus{
-            border-color:$orange !important;
-            box-shadow:0 0 0 0.25rem  $Semi-Transparent-Orange !important;
-          }
-        }
-        button {
-          background-color: $orange;
-          color: $light;
-          outline: none;
-          border: none;
-          transition: $transition-1th;
-          &:hover {
-            background-color: $light;
-            color: $orange;
-          }
-        }
+        // input {
+        //   &:focus{
+        //     border-color:$orange !important;
+        //     box-shadow:0 0 0 0.25rem  $Semi-Transparent-Orange !important;
+        //   }
+        // }
+        // button {
+        //   background-color: $orange;
+        //   color: $light;
+        //   outline: none;
+        //   border: none;
+        //   transition: $transition-1th;
+        //   &:hover {
+        //     background-color: $light;
+        //     color: $orange;
+        //   }
+        // }
       }
     }
   }
