--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,11 @@
 @use "../css/sass/base/typography" as *;
 @use "../css/sass/utils/mixins" as *;
 @use "../css/sass/utils/functions" as *;
+@use "../css/sass/components/inputs" as *;
+@use "../css/sass/components/buttons" as *;
 @use "../css/sass/layout/grid" as *;
 @use "../css/sass/layout/header" as *;
+@use "../css/sass/layout/book" as *;
 @use "../css/sass/pages/globalpage" as *;
 // @use "../css/sass/layout/header" as *;
 @use "../css/sass/pages/home" as *;
