--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,9 +5,11 @@
 @use "../css/sass/utils/functions" as *;
 @use "../css/sass/components/inputs" as *;
 @use "../css/sass/components/buttons" as *;
+@use "../css/sass/components/headings" as *;
 @use "../css/sass/layout/grid" as *;
 @use "../css/sass/layout/header" as *;
 @use "../css/sass/layout/book" as *;
+@use "../css/sass/layout/packages" as *;
 @use "../css/sass/pages/globalpage" as *;
 // @use "../css/sass/layout/header" as *;
 @use "../css/sass/pages/home" as *;
