--- a/assets/css/sass/pages/_home.scss
+++ b/assets/css/sass/pages/_home.scss
@@ -90,7 +90,10 @@
       padding: 10px;
       letter-spacing: 2px;
       font-weight: 550;
-      border-radius: 5px;
+      // border-radius: 5px;
+      // background-color: $light;
+      // color: $dark;
+
     }
   }
 }
