--- a/assets/css/sass/utils/_variables.scss
+++ b/assets/css/sass/utils/_variables.scss
@@ -29,13 +29,14 @@ $transparent-black: rgba(0, 0, 0, 0.13); // Equivalent to #00000021
 $lightBlack: rgb(0 0 0 / 5%);
 $lightGray: rgb(234, 234, 234);
 $mediumGray: rgb(172, 172, 172);
-
+$softBlack: rgba(0, 0, 0, 0.1);
 //box Shadows
 $primary-shadow: 0 4px 4px $semi-transparent-black;
 $secondary-shadow: 0px 21px 13px $semi-transparent-black;
 $th3-shadow: 0 21px 13px $transparent-black;
 $th4-shadow: $lightBlack -3px 11px 13px 0px;
 $th6-shadow: 0px 5px 5px -6px $dark;
+$th7-shadow: $softBlack 0px 4px 12px;
 // text shadows
 $text-primary-shadow: 0px 1px 1px $dark;
 // transitions
