--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,16 @@ textarea:focus, input:focus {
   color: #ffa500;
 }
 
+.main-text h1 {
+  text-align: center;
+  text-shadow: 0px 1px 1px black;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.main-text h1 span {
+  color: #ffa500;
+}
+
 * {
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
@@ -56,25 +66,16 @@ textarea:focus, input:focus {
 .book {
   background-color: #f9f9f9;
   padding: 50px;
-  height: 100vh;
 }
 @media (max-width:767px) {
   .book {
     padding: 0;
   }
 }
-.book .container .main-text h1 {
-  text-align: center;
-  text-shadow: 0px 1px 1px black;
-  font-weight: 600;
-}
 @media (max-width:767px) {
   .book .container .main-text h1 {
     margin-top: 20px;
   }
-}
-.book .container .main-text h1 span {
-  color: #ffa500;
 }
 .book .container .row {
   margin-top: 30px;
@@ -101,6 +102,34 @@ textarea:focus, input:focus {
   }
 }
 
+.packages .container .main-text h1 {
+  margin-top: 30px;
+}
+.packages .container .row {
+  margin-top: 30px;
+}
+.packages .container .row .card {
+  border-radius: 5px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.packages .container .row .card img {
+  border-radius: 5px;
+}
+.packages .container .row .card .card-body h3 {
+  font-size: 25px;
+  font-weight: 600;
+}
+.packages .container .row .card .card-body p {
+  font-size: 15px;
+}
+.packages .container .row .card .card-body .star i, .packages .container .row .card .card-body .star svg {
+  color: #ffa500;
+}
+.packages .container .row .card .card-body h6 {
+  font-size: 20px;
+  margin: 10px 0;
+}
 ul,
 ol,
 li {
@@ -280,7 +309,6 @@ a {
   padding: 10px;
   letter-spacing: 2px;
   font-weight: 550;
-  border-radius: 5px;
 }
 
 /*Start Footer*/
