--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,29 @@ textarea:focus, input:focus {
   font-size: 20px;
   margin: 10px 0;
 }
+.services {
+  background-color: #f9f9f9;
+  margin-top: 50px;
+}
+.services .container .main-text h1 {
+  margin-top: 30px;
+}
+.services .container .row {
+  margin-top: 30px;
+}
+.services .container .row .card {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  cursor: pointer;
+  border: none;
+}
+.services .container .row .card i, .services .container .row .card svg {
+  font-size: 80px;
+  color: #ffa500;
+  margin-top: 20px;
+}
+.services .container .row .card .card-body h3 {
+  font-weight: 600;
+}
 ul,
 ol,
 li {
