--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
 @use "../css/sass/layout/header" as *;
 @use "../css/sass/layout/book" as *;
 @use "../css/sass/layout/packages" as *;
+@use "../css/sass/layout/services" as *;
 @use "../css/sass/pages/globalpage" as *;
 // @use "../css/sass/layout/header" as *;
 @use "../css/sass/pages/home" as *;
