--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ textarea:focus, input:focus {
   margin-top: 50px;
 }
 .services .container .main-text h1 {
-  margin-top: 30px;
+  padding-top: 30px;
 }
 .services .container .row {
   margin-top: 30px;
@@ -153,6 +153,27 @@ textarea:focus, input:focus {
 .services .container .row .card .card-body h3 {
   font-weight: 600;
 }
+.gallary {
+  margin-top: 50px;
+}
+.gallary .container .main-text h1 {
+  padding-top: 20px;
+}
+.gallary .container .row {
+  margin-top: 30px;
+}
+.gallary .container .row .card {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  cursor: pointer;
+}
+.gallary .container .row .card img {
+  height: 230px;
+  transition: 0.5s ease;
+}
+.gallary .container .row .card img:hover {
+  transform: scale(1.1);
+}
+
 ul,
 ol,
 li {
