--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@
 @use "../css/sass/layout/services" as *;
 @use "../css/sass/layout/gallary" as *;
 @use "../css/sass/pages/globalpage" as *;
+@use "../css/sass/pages/about" as *;
 // @use "../css/sass/layout/header" as *;
 @use "../css/sass/pages/home" as *;
 @use "../css/sass/layout/footer" as *;
