footer  section it's done

--- a/assets/css/sass/pages/_home.scss
+++ b/assets/css/sass/pages/_home.scss
@@ -2,7 +2,8 @@
 @use "../utils/variables" as *;
 .home {
   width: 100%;
-  height: calc(100vh - 85px);
+  // height: calc(100vh - 85px);
+  height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)),
     url(../images/background-img.png);
   background-repeat: no-repeat;
