--- a/assets/css/sass/layout/_gallary.scss
+++ b/assets/css/sass/layout/_gallary.scss
@@ -1,6 +1,7 @@
 @use "../utils/variables" as *;
 .gallary{
     margin-top: 50px;
+    padding-bottom: 30px;
     .container{
         .main-text{
             h1{
