--- a/assets/css/sass/layout/_packages.scss
+++ b/assets/css/sass/layout/_packages.scss
@@ -29,7 +29,8 @@
                     }
                     .star{
                         i,svg{
-                            color: $orange;
+                            // color: $orange;
+                            color: var(--orange);
 
                         }
                     }
