--- a/assets/css/sass/pages/_about.scss
+++ b/assets/css/sass/pages/_about.scss
@@ -6,7 +6,8 @@
 //    height: 100vh;
 //    margin-top: 50px;
 padding: 50px;
-background-color: $gray;
+// background-color: $gray;
+background-color: var(--gray);
 @media #{$maxMobile} {
        padding: 10px;
     
