--- a/assets/css/sass/components/_buttons.scss
+++ b/assets/css/sass/components/_buttons.scss
@@ -1,12 +1,16 @@
 @use "../utils/variables" as *;
 .main-btn {
-  background-color: $orange;
+  // background-color: $orange,var(--orange);
+  background-color: var(--orange);
   color: $light;
+  // color: var(--light);
   outline: none;
   border: none;
   transition: $transition-2th;
   &:hover {
     background-color: $light;
-    color: $orange;
+    // background-color: var(--light);
+    // color: $orange;
+    color: var(--orange);
   }
 }
