--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,33 @@
+body {
+  --dark: black;
+  --orange: #ffa500;
+  --Semi-Transparent-Orange: rgba(255, 165, 0, 0.5);
+  --gray: #f9f9f9;
+  --light: #fff;
+  --mustard: #eec048;
+}
+
+body[data-bs-theme=dark] {
+  --dark: white; /* Adjusted dark color */
+  --orange: #ff6600; /* Adjusted orange color */
+  --Semi-Transparent-Orange: rgba(
+    255,
+    102,
+    0,
+    0.5
+  ); /* Adjusted semi-transparent orange color */
+  --gray: #333; /* Adjusted gray color */
+  --light: #000; /* Adjusted light color */
+  --mustard: #c98f1f;
+}
+
 textarea:focus, input:focus {
-  border-color: #ffa500 !important;
-  box-shadow: 0 0 0 0.25rem rgba(255, 165, 0, 0.5) !important;
+  border-color: var(--orange) !important;
+  box-shadow: 0 0 0 0.25rem var(--Semi-Transparent-Orange) !important;
 }
 
 .main-btn {
-  background-color: #ffa500;
+  background-color: var(--orange);
   color: #fff;
   outline: none;
   border: none;
@@ -12,17 +35,17 @@ textarea:focus, input:focus {
 }
 .main-btn:hover {
   background-color: #fff;
-  color: #ffa500;
+  color: var(--orange);
 }
 
 .main-text h1 {
   text-align: center;
-  text-shadow: 0px 1px 1px black;
+  text-shadow: 0px 1px 1px var(--dark);
   font-weight: 600;
   text-transform: capitalize;
 }
 .main-text h1 span {
-  color: #ffa500;
+  color: var(--orange);
 }
 
 * {
@@ -36,35 +59,56 @@ textarea:focus, input:focus {
 }
 
 .navbar {
-  background-color: #f9f9f9;
+  background-color: var(--gray);
 }
 .navbar .container .navbar-brand {
-  font-weight: 550;
   font-size: 36px;
-  color: black;
-  text-shadow: 0px 1px 1px black;
+  font-weight: 550;
+  color: var(--dark);
+  text-shadow: 0px 1px 1px var(--dark);
   margin-bottom: 5px;
 }
 .navbar .container .navbar-brand span {
-  color: #ffa500;
+  color: var(--orange);
 }
 .navbar .container .navbar-toggler .menu-icon {
-  color: #ffa500;
+  color: var(--orange);
 }
 .navbar .container .collapse .navbar-nav .nav-item .nav-link {
   letter-spacing: 1px;
   font-size: 16px;
   font-weight: 550;
   border-radius: 3px;
-  color: black;
+  color: var(--dark);
   transition: 0.3s ease;
 }
 .navbar .container .collapse .navbar-nav .nav-item .nav-link:hover {
-  background: #eec048;
+  background: var(--mustard);
   color: #fff;
 }
+@media (max-width:991px) {
+  .navbar .container .collapse .navbar-nav .dropdown {
+    margin-bottom: 10px;
+  }
+}
+.navbar .container .collapse .navbar-nav .dropdown button {
+  background-color: var(--gray) !important;
+  color: var(--dark);
+}
+.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li {
+  cursor: pointer;
+}
+.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg {
+  padding: 0 10px;
+}
+.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i.light, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg.light {
+  color: var(--orange);
+}
+.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i.dark, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg.dark {
+  color: var(--dark);
+}
 .book {
-  background-color: #f9f9f9;
+  background-color: var(--gray);
   padding: 50px;
 }
 @media (max-width:767px) {
@@ -82,7 +126,7 @@ textarea:focus, input:focus {
 }
 .book .container .row .card {
   border-radius: 10px;
-  box-shadow: 0px 5px 5px -6px black;
+  box-shadow: 0px 5px 5px -6px var(--dark);
 }
 .book .container .row form input[type=submit] {
   margin-top: 10px;
@@ -124,15 +168,16 @@ textarea:focus, input:focus {
   font-size: 15px;
 }
 .packages .container .row .card .card-body .star i, .packages .container .row .card .card-body .star svg {
-  color: #ffa500;
+  color: var(--orange);
 }
 .packages .container .row .card .card-body h6 {
   font-size: 20px;
   margin: 10px 0;
 }
 .services {
-  background-color: #f9f9f9;
+  background-color: var(--gray);
   margin-top: 50px;
+  padding-bottom: 21px;
 }
 .services .container .main-text h1 {
   padding-top: 30px;
@@ -147,7 +192,7 @@ textarea:focus, input:focus {
 }
 .services .container .row .card i, .services .container .row .card svg {
   font-size: 80px;
-  color: #ffa500;
+  color: var(--orange);
   margin-top: 20px;
 }
 .services .container .row .card .card-body h3 {
@@ -155,6 +200,7 @@ textarea:focus, input:focus {
 }
 .gallary {
   margin-top: 50px;
+  padding-bottom: 30px;
 }
 .gallary .container .main-text h1 {
   padding-top: 20px;
@@ -241,22 +287,22 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f9f9f9;
+  background-color: var(--gray);
   cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #ffa500;
+  background-color: var(--orange);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 165, 0, 0.5);
+  background-color: var(--Semi-Transparent-Orange);
 }
 
 .about {
   padding: 50px;
-  background-color: #f9f9f9;
+  background-color: var(--gray);
 }
 @media (max-width:767px) {
   .about {
@@ -304,7 +350,7 @@ a {
 .home .content h1,
 .home .content p {
   color: #fff;
-  text-shadow: 0px 1px 1px black;
+  text-shadow: 0px 1px 1px var(--dark);
 }
 .home .content h1,
 .home .content p {
@@ -330,8 +376,8 @@ a {
 }
 .home .content h1 .countries::after {
   content: " ";
-  color: #ffa500;
-  text-shadow: 0px 1px 1px black;
+  color: var(--orange);
+  text-shadow: 0px 1px 1px var(--dark);
   animation: changetext 10s infinite linear;
 }
 @keyframes changetext {
@@ -392,9 +438,9 @@ a {
 }
 .footer .social-links i, .footer .social-links svg {
   font-size: 20px;
-  background-color: black;
+  background-color: var(--dark);
   padding: 10px;
-  color: #fff;
+  color: var(--light);
   margin-left: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -402,7 +448,8 @@ a {
   transition: 0.5s ease;
 }
 .footer .social-links i:hover, .footer .social-links svg:hover {
-  background-color: #ffa500;
+  background-color: var(--orange);
+  color: var(--dark);
 }
 .footer .copyright {
   padding-top: 20px;
