--- a/assets/css/sass/layout/_services.scss
+++ b/assets/css/sass/layout/_services.scss
@@ -19,10 +19,10 @@
                 cursor: pointer;
                 border: none;
                 i,svg{
-                    font-size: 80px;
-                    // color: $orange;
                     color: var(--orange);
-                    margin-top: 20px;
+                    font-size: 40px;
+                    margin: 20px 0;
+                
                 }
                 .card-body{
                   
