--- a/assets/css/sass/pages/_home.scss
+++ b/assets/css/sass/pages/_home.scss
@@ -1,6 +1,7 @@
 @use "../utils/mixins" as *;
 @use "../utils/variables" as *;
 .home {
+  position: relative;
   width: 100%;
   // height: calc(100vh - 85px);
   height: 100vh;
@@ -11,6 +12,41 @@
   @media #{$maxMobile} {
     background-position: 50%;
   }
+  // Arrow Down
+.go-down{
+  position: absolute;
+  top: 90%;
+  width: 25px;
+  z-index: 99;
+  height: 25px;
+  // background-color: red;
+  text-align: center;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: bouncing 1.5s infinite;
+    cursor: pointer;
+    @keyframes bouncing {
+
+      0%,
+      10%,
+      20%,
+      50%,
+      80%,
+      100% {
+          transform: translateY(0);
+      }
+  
+      40%,
+      60% {
+          transform: translateY(-20px);
+      }
+  }
+  i,svg{
+    // position: absolute;
+    color: var(--gray);
+    font-size: 30px;
+  }
+}
   .content {
     text-align: center;
     padding-top: 200px;
@@ -95,3 +131,4 @@
     }
   }
 }
+
