--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,32 +80,23 @@ textarea:focus, input:focus {
   font-weight: 550;
   border-radius: 3px;
   color: var(--dark);
+  padding-left: 10px;
   transition: 0.3s ease;
 }
 .navbar .container .collapse .navbar-nav .nav-item .nav-link:hover {
   background: var(--mustard);
   color: #fff;
 }
+.navbar .container .collapse .navbar-nav .theme-togler {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
+}
 @media (max-width:991px) {
-  .navbar .container .collapse .navbar-nav .dropdown {
+  .navbar .container .collapse .navbar-nav .theme-togler {
     margin-bottom: 10px;
   }
-}
-.navbar .container .collapse .navbar-nav .dropdown button {
-  background-color: var(--gray) !important;
-  color: var(--dark);
-}
-.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li {
-  cursor: pointer;
-}
-.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg {
-  padding: 0 10px;
-}
-.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i.light, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg.light {
-  color: var(--orange);
-}
-.navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li i.dark, .navbar .container .collapse .navbar-nav .dropdown .dropdown-menu li svg.dark {
-  color: var(--dark);
 }
 .book {
   background-color: var(--gray);
@@ -133,9 +124,6 @@ textarea:focus, input:focus {
   font-size: 16px;
   font-weight: 550;
   width: 160px;
-}
-.book .container .row form input[type=submit]:hover {
-  width: 170px;
 }
 @media (max-width:767px) {
   .book .container .row form input[type=submit] {
@@ -191,9 +179,9 @@ textarea:focus, input:focus {
   border: none;
 }
 .services .container .row .card i, .services .container .row .card svg {
-  font-size: 80px;
   color: var(--orange);
-  margin-top: 20px;
+  font-size: 40px;
+  margin: 20px 0;
 }
 .services .container .row .card .card-body h3 {
   font-weight: 600;
@@ -229,6 +217,28 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.go-up {
+  position: fixed;
+  right: -100%;
+  bottom: 40px;
+  z-index: 100;
+  z-index: 99;
+  cursor: pointer;
+  display: none;
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+.go-up.active {
+  opacity: 1;
+  display: initial;
+  right: 40px;
+}
+.go-up i, .go-up svg {
+  color: var(--orange);
+  font-size: 30px;
+  transition: all 0.5s ease;
 }
 
 .paddings {
@@ -331,6 +341,7 @@ a {
 }
 
 .home {
+  position: relative;
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(../images/background-img.png);
@@ -341,6 +352,30 @@ a {
   .home {
     background-position: 50%;
   }
+}
+.home .go-down {
+  position: absolute;
+  top: 90%;
+  width: 25px;
+  z-index: 99;
+  height: 25px;
+  text-align: center;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: bouncing 1.5s infinite;
+  cursor: pointer;
+}
+@keyframes bouncing {
+  0%, 10%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40%, 60% {
+    transform: translateY(-20px);
+  }
+}
+.home .go-down i, .home .go-down svg {
+  color: var(--gray);
+  font-size: 30px;
 }
 .home .content {
   text-align: center;
