--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,9 @@ textarea:focus, input:focus {
   border: none;
   transition: 0.5s ease;
 }
-.main-btn:hover {
-  background-color: #fff;
-  color: var(--orange);
+.main-btn:hover, .main-btn:active {
+  background-color: #fff !important;
+  color: var(--orange) !important;
 }
 
 .main-text h1 {
@@ -390,6 +390,7 @@ a {
 .home .content h1,
 .home .content p {
   margin-top: 5px;
+  text-shadow: 0px 1px 1px black;
 }
 .home .content h5 {
   font-size: 38px;
